crates/ink/tests/ui/contract/fail/constructor-self-receiver-03.stderr
error: in the trait associated type is declared without lifetime parameters, so using a borrowed type for them requires that lifetime to come from the implemented type
 --> tests/ui/contract/fail/constructor-self-receiver-03.rs:8:34
  |
8 |         pub fn constructor(this: &Self) -> Self {
  |                                  ^ this lifetime must come from the implemented type

error[E0411]: cannot find type `Self` in this scope
 --> tests/ui/contract/fail/constructor-self-receiver-03.rs:8:35
  |
4 |     pub struct Contract {}
  |     ---------------------- `Self` not allowed in a constant item
...
8 |         pub fn constructor(this: &Self) -> Self {
  |                                   ^^^^ `Self` is only available in impls, traits, and type definitions

error[E0411]: cannot find type `Self` in this scope
 --> tests/ui/contract/fail/constructor-self-receiver-03.rs:8:35
  |
1 | #[ink::contract]
  | ---------------- `Self` not allowed in a function
...
8 |         pub fn constructor(this: &Self) -> Self {
  |                                   ^^^^ `Self` is only available in impls, traits, and type definitions

warning: unused variable: `this`
 --> tests/ui/contract/fail/constructor-self-receiver-03.rs:8:28
  |
8 |         pub fn constructor(this: &Self) -> Self {
  |                            ^^^^ help: if this is intentional, prefix it with an underscore: `_this`
  |
  = note: `#[warn(unused_variables)]` on by default
